# ae85d9b8-4c15-11ea-90ff-52e448637004

./: .clang-format  CMakeLists.txt  Eraser.cpp  Eraser.h  Paper.cpp  Paper.h  Pencil.cpp  Pencil.h  PencilPoint.cpp  PencilPoint.h  README.txt  library.h
unittests/: CMakeLists.txt  test_eraser.cpp  test_paper.cpp  test_pencil_durability.cpp  test_pencil_point.cpp
